--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -3,11 +3,12 @@
     font-family: FontAwesome, sans-serif;
     font-size: 13px;
     border-radius: 17px;
+    margin: 2;
 }
 
 window#waybar {
-    background-color: rgba(43, 48, 59, 0.5);
-    border-bottom: 3px solid rgba(100, 114, 125, 0.5);
+    background-color: rgba(170, 170, 170, 0.3);
+    border-bottom: 1px solid rgba(100, 114, 125, 0.8);
     color: #ffffff;
     transition-property: background-color;
     transition-duration: .5s;
@@ -40,7 +41,7 @@ button {
     box-shadow: inset 0 -3px transparent;
     /* Avoid rounded borders under each button name */
     border: none;
-    /* border-radius: 0; */
+    /* border-radius: 2; */
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
@@ -61,16 +62,22 @@ button:hover {
 }
 
 #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(256, 30, 0, 0.7);
+}
+
+#workspaces button.active {
+    background: rgba(256, 130, 30, 0.7);
 }
 
 #workspaces button.focused {
     background-color: #64727D;
     box-shadow: inset 0 -3px #ffffff;
+    color: #C71134;
 }
 
 #workspaces button.urgent {
     background-color: #eb4d4b;
+    color: #C71134;
 }
 
 #mode {
@@ -101,12 +108,15 @@ button:hover {
 
 #window,
 #workspaces {
-    margin: 0 4px;
+    margin: 2;
+    /* margin: 0 4px; */
 }
 
 /* If workspaces is the leftmost module, omit left margin */
 .modules-left > widget:first-child > #workspaces {
     margin-left: 0;
+    background-color: #00296b;
+    color: #F68B9C;
 }
 
 /* If workspaces is the rightmost module, omit right margin */
@@ -115,7 +125,10 @@ button:hover {
 }
 
 #clock {
-    background-color: #64727D;
+    background-color: #00296b;
+    color: #FFFFFF;
+    font-size: 15px;
+    font-weight: bold;
 }
 
 #battery {
@@ -195,6 +208,7 @@ label:focus {
 
 #backlight {
     background-color: #90b1b1;
+    color: #000000;
 }
 
 #network {
